name:                fftabs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/maxdiefenbach/fftabs#readme
license:             BSD3
license-file:        LICENSE
author:              Maximilian N. Diefenbach
maintainer:          maxdiefenbach@protonmail.com
copyright:           Copyright (c) 2020 Maximilian N. Diefenbach
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable fftabs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , bytestring
                     , lens
                     , lens-aeson
                     , lz4-hs
                     , text >= 1.2.4.0
